# zensical-shadcn

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _typos.toml  justfile  package.json  pyproject.toml  seal.toml
.github/: dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: ci.yml  release.yml
pages/: mkdocs.yml  zensical.toml
pages/docs/: 10_get_started.md  20_pages.md  30_html.md  index.md
pages/docs/assets/echarts/: line.js
pages/docs/extensions/: admonition.md  attribute_lists.md  codehilite.md  codexec.md  echarts.md  fenced_code.md  footnotes.md  hover_card.md  iconify.md  pymdownx_arithmatex.md  pymdownx_blocks_caption.md  pymdownx_blocks_details.md  pymdownx_blocks_tab.md  pymdownx_progressbar.md  pymdownx_tabbed.md  toc.md
pages/docs/plugins/: autonumber.md  excalidraw.md  mkdocstrings.md
pages/excalidraw/: drawing0.json
shadcn/: main.html
shadcn/css/: base.css
shadcn/extensions/: autonumber.py  iconify.py
shadcn/js/: auto-render.min.js  callbacks.js  dark.js  echarts-style.js  echarts.min.js  katex.min.js
tailwind/: excalidraw.css  hover_card.css  input.css  main.css  mkdocstrings.css  shadcn.css  toc.css
tests/: test_build.py  test_extensions.py
